# python-magicseaweed

./: .env.sample  LICENSE  README.md  msw_notes  requirements.txt  run.py  sampe_api_response.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish.yml  test.yml
magicseaweed/: __init__.py  api.py  models.py  utils.py
test/: tests.py
test/fixtures/: error_response.json  success_current_response.json
