[metadata]
name = magicseaweed
description = Simple, Python based API wrapper for the magicseaweed.com API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jcconnell/python-magicseaweed
project_urls =
    Bug Tracker = https://github.com/jcconnell/python-magicseaweed/issues
    Changelog = https://github.com/jcconnell/python-magicseaweed/releases
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
package_dir =
    = magicseaweed
packages = find:
python_requires = >=3.6

[options.packages.find]
where = magicseaweed